[SASP-3014] Java8 compatibility fixes introduced in Pr (#1)
Fix java8 compatibility problem introduced in previous Pr.

The project now works (confirmed with sbt testing) with java8.